# epg-service

./: .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  docker-entrypoint.sh  epg_fetcher.py  main.py  pyproject.toml  xmltv_parser.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_import_status.py  0003_not_null_timestamps.py  0004_remove_last_channels_update_at.py  0005_import_status_sources_count.py
app/: config.py  database.py  dependencies.py  epg_fetcher.py  main.py  models.py  routers.py  scheduler.py  schemas.py  xmltv_parser.py
app/application/: epg_fetch_service.py  epg_query_service.py  scheduler_service.py
app/db/: orm_models.py  repository.py  session.py
app/domain/: entities.py  repositories.py  unit_of_work.py
app/infrastructure/db/: dependencies.py  models.py  repository.py  unit_of_work.py
app/infrastructure/epg/: downloader.py
app/infrastructure/xmltv/: parser.py
app/services/: __init__.py  db_service.py  downloader.py  epg_downloader_service.py  epg_fetch.py  epg_fetch_service.py  epg_query.py  epg_query_service.py  fetch_coordinator.py  fetch_types.py  scheduler.py  scheduler_service.py  stats.py  xmltv_parser.py  xmltv_parser_service.py
app/utils/: __init__.py  data_merging.py  file_operations.py  logging_helpers.py  timezone.py
