[project]
name = "epg-service"
version = "0.1.0"
description = "EPG Service - Fetch and serve XMLTV EPG data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "aiofiles>=24.1.0",
    "apscheduler>=3.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
